# ImageToTkiZ

./: .gitignore  CMakeLists.txt
src/: main.cpp
